--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -9,19 +9,18 @@ tap "rbenv/tap"
 tap "warrensbox/tap"
 brew "ack"
 brew "adns"
-brew "lz4"
 brew "glib"
 brew "lzo"
-brew "python@3.9"
 brew "cairo"
 brew "graphite2"
-brew "icu4c"
 brew "harfbuzz"
+brew "lz4"
 brew "apache-spark"
 brew "autoconf"
 brew "autojump"
 brew "automake"
 brew "autossh"
+brew "python@3.11"
 brew "awscli"
 brew "bash"
 brew "bat"
@@ -55,7 +54,6 @@ brew "gnupg"
 brew "go"
 brew "gobject-introspection"
 brew "gradle"
-brew "pango"
 brew "librsvg"
 brew "graphviz"
 brew "grep"
@@ -77,6 +75,7 @@ brew "maven"
 brew "node"
 brew "openjdk@11"
 brew "openjdk@8"
+brew "openssl@3"
 brew "p7zip"
 brew "pandoc"
 brew "perl"
@@ -85,6 +84,7 @@ brew "pinentry-mac"
 brew "pth"
 brew "pyenv"
 brew "pyenv-virtualenv"
+brew "ruby"
 brew "rust"
 brew "s3cmd"
 brew "sbt"
@@ -148,7 +148,6 @@ cask "robo-3t"
 cask "shortcutdetective"
 cask "signal"
 cask "slack"
-cask "spectacle"
 cask "spotify"
 cask "tableplus"
 cask "telegram"
@@ -164,7 +163,6 @@ mas "GarageBand", id: 682658836
 mas "iMovie", id: 408981434
 mas "JSONPlistBuddy", id: 1574947481
 mas "Keynote", id: 409183694
-mas "Luminar AI", id: 1541310539
 mas "Meeter", id: 1510445899
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
