--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -29,12 +29,16 @@ brew "chruby"
 brew "ruby"
 brew "cocoapods"
 brew "gmp"
+brew "libidn2"
+brew "gnutls"
+brew "colima"
 brew "coreutils"
 brew "cscope"
-brew "libidn2"
 brew "openldap"
 brew "difftastic"
-brew "docker-credential-helper-ecr", link: false
+brew "docker"
+brew "docker-compose"
+brew "docker-credential-helper-ecr"
 brew "dotnet"
 brew "fd"
 brew "fish"
@@ -50,7 +54,6 @@ brew "git-lfs"
 brew "git-secrets"
 brew "git-sizer"
 brew "gnu-getopt"
-brew "gnutls"
 brew "gnupg"
 brew "go"
 brew "gobject-introspection"
@@ -119,7 +122,6 @@ cask "caffeine"
 cask "calibre"
 cask "daisydisk"
 cask "discord"
-cask "docker"
 cask "dozer"
 cask "firefox"
 cask "flutter"
