--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -37,6 +37,7 @@ brew "cscope"
 brew "openldap"
 brew "difftastic"
 brew "docker"
+brew "docker-buildx"
 brew "docker-compose"
 brew "docker-credential-helper-ecr"
 brew "dotnet"
