--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -78,6 +78,7 @@ brew "luajit"
 brew "mas"
 brew "maven"
 brew "node"
+brew "newman"
 brew "openjdk@11"
 brew "openjdk@8"
 brew "openssl@3"
@@ -115,6 +116,7 @@ brew "youtube-dl"
 brew "rbenv/tap/openssl@1.0"
 brew "warrensbox/tap/tfswitch"
 cask "1password"
+cask "1password-cli"
 cask "alfred"
 cask "android-file-transfer"
 cask "aws-vault"
@@ -132,6 +134,7 @@ cask "font-fira-code-nerd-font"
 cask "font-open-sans"
 cask "font-powerline-symbols"
 cask "font-source-code-pro"
+cask "github"
 cask "google-chrome"
 cask "istat-menus"
 cask "iterm2"
