--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -162,6 +162,7 @@ cask "toggl-track"
 cask "vagrant"
 cask "visual-studio-code"
 cask "vlc"
+cask "warp"
 cask "webex"
 cask "whatsapp"
 cask "zoom"
