--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -168,6 +168,7 @@ cask "whatsapp"
 cask "zoom"
 mas "GarageBand", id: 682658836
 mas "iMovie", id: 408981434
+mas "In Your Face", id: 1476964367
 mas "JSONPlistBuddy", id: 1574947481
 mas "Keynote", id: 409183694
 mas "Meeter", id: 1510445899
