--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -12,7 +12,6 @@ brew "adns"
 brew "lz4"
 brew "glib"
 brew "lzo"
-brew "openssl@3", link: false
 brew "python@3.9"
 brew "cairo"
 brew "graphite2"
@@ -80,10 +79,7 @@ brew "libxml2"
 brew "luajit"
 brew "mas"
 brew "maven"
-brew "mkcert"
 brew "node"
-brew "newman"
-brew "nss"
 brew "openjdk@11"
 brew "openjdk@8"
 brew "p7zip"
@@ -187,6 +183,7 @@ vscode "ms-azuretools.vscode-docker"
 vscode "ms-vscode-remote.remote-containers"
 vscode "redhat.java"
 vscode "skyapps.fish-vscode"
+vscode "VisualStudioExptTeam.intellicode-api-usage-examples"
 vscode "VisualStudioExptTeam.vscodeintellicode"
 vscode "vscjava.vscode-java-debug"
 vscode "vscjava.vscode-java-dependency"
