--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -13,6 +13,7 @@ brew "lz4"
 brew "glib"
 brew "lzo"
 brew "python@3.9"
+brew "openssl@3"
 brew "cairo"
 brew "graphite2"
 brew "icu4c"
@@ -80,6 +81,7 @@ brew "luajit"
 brew "mas"
 brew "maven"
 brew "node"
+brew "newman"
 brew "openjdk@11"
 brew "openjdk@8"
 brew "p7zip"
