--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -13,7 +13,6 @@ brew "lz4"
 brew "glib"
 brew "lzo"
 brew "python@3.9"
-brew "openssl@3"
 brew "cairo"
 brew "graphite2"
 brew "icu4c"
@@ -81,7 +80,6 @@ brew "luajit"
 brew "mas"
 brew "maven"
 brew "node"
-brew "newman"
 brew "openjdk@11"
 brew "openjdk@8"
 brew "p7zip"
@@ -164,6 +162,7 @@ cask "toggl-track"
 cask "vagrant"
 cask "visual-studio-code"
 cask "vlc"
+cask "warp"
 cask "webex"
 cask "whatsapp"
 cask "zoom"
