--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -12,14 +12,12 @@ brew "adns"
 brew "lz4"
 brew "glib"
 brew "lzo"
-brew "python@3.9"
+brew "openssl@3"
 brew "cairo"
 brew "graphite2"
-brew "icu4c"
 brew "harfbuzz"
 brew "apache-spark"
 brew "autoconf"
-brew "python@3.10"
 brew "autojump"
 brew "automake"
 brew "autossh"
@@ -29,15 +27,19 @@ brew "bash"
 brew "bat"
 brew "bfg"
 brew "chruby"
+brew "ruby"
 brew "cocoapods"
 brew "gmp"
+brew "libidn2"
+brew "gnutls"
+brew "colima"
 brew "coreutils"
 brew "cscope"
-brew "libunistring"
-brew "libidn2"
 brew "openldap"
-brew "curl"
 brew "difftastic"
+brew "docker"
+brew "docker-buildx"
+brew "docker-compose"
 brew "docker-credential-helper-ecr"
 brew "dotnet"
 brew "fd"
@@ -54,13 +56,10 @@ brew "git-lfs"
 brew "git-secrets"
 brew "git-sizer"
 brew "gnu-getopt"
-brew "gnutls"
 brew "gnupg"
 brew "go"
 brew "gobject-introspection"
 brew "gradle"
-brew "netpbm"
-brew "pango"
 brew "librsvg"
 brew "graphviz"
 brew "grep"
@@ -116,6 +115,7 @@ brew "youtube-dl"
 brew "rbenv/tap/openssl@1.0"
 brew "warrensbox/tap/tfswitch"
 cask "1password"
+cask "1password-cli"
 cask "alfred"
 cask "android-file-transfer"
 cask "aws-vault"
@@ -124,7 +124,6 @@ cask "caffeine"
 cask "calibre"
 cask "daisydisk"
 cask "discord"
-cask "docker"
 cask "dozer"
 cask "firefox"
 cask "flutter"
@@ -134,6 +133,7 @@ cask "font-fira-code-nerd-font"
 cask "font-open-sans"
 cask "font-powerline-symbols"
 cask "font-source-code-pro"
+cask "github"
 cask "google-chrome"
 cask "istat-menus"
 cask "iterm2"
@@ -153,7 +153,6 @@ cask "robo-3t"
 cask "shortcutdetective"
 cask "signal"
 cask "slack"
-cask "spectacle"
 cask "spotify"
 cask "tableplus"
 cask "telegram"
@@ -168,21 +167,40 @@ cask "whatsapp"
 cask "zoom"
 mas "GarageBand", id: 682658836
 mas "iMovie", id: 408981434
+mas "In Your Face", id: 1476964367
 mas "JSONPlistBuddy", id: 1574947481
 mas "Keynote", id: 409183694
-mas "Luminar AI", id: 1541310539
 mas "Meeter", id: 1510445899
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
 mas "Pixelmator Pro", id: 1289583905
 mas "The Unarchiver", id: 425424353
 mas "Xcode", id: 497799835
-vscode "haskell.haskell"
-vscode "justusadam.language-haskell"
+vscode "DotJoshJohnson.xml"
+vscode "eamodio.gitlens"
+vscode "EditorConfig.EditorConfig"
+vscode "elmTooling.elm-ls-vscode"
+vscode "GitLab.gitlab-workflow"
+vscode "hashicorp.terraform"
+vscode "hbenl.vscode-test-explorer"
 vscode "k--kato.intellij-idea-keybindings"
+vscode "mechatroner.rainbow-csv"
+vscode "mikestead.dotenv"
 vscode "ms-azuretools.vscode-docker"
+vscode "ms-dotnettools.csharp"
+vscode "ms-python.black-formatter"
+vscode "ms-python.isort"
+vscode "ms-python.python"
+vscode "ms-python.vscode-pylance"
+vscode "ms-toolsai.jupyter"
+vscode "ms-toolsai.vscode-jupyter-cell-tags"
+vscode "ms-toolsai.vscode-jupyter-slideshow"
 vscode "ms-vscode-remote.remote-containers"
+vscode "ms-vscode.test-adapter-converter"
+vscode "rebornix.ruby"
+vscode "redhat.fabric8-analytics"
 vscode "redhat.java"
+vscode "redhat.vscode-yaml"
 vscode "skyapps.fish-vscode"
 vscode "VisualStudioExptTeam.intellicode-api-usage-examples"
 vscode "VisualStudioExptTeam.vscodeintellicode"
@@ -191,3 +209,4 @@ vscode "vscjava.vscode-java-dependency"
 vscode "vscjava.vscode-java-pack"
 vscode "vscjava.vscode-java-test"
 vscode "vscjava.vscode-maven"
+vscode "wingrunr21.vscode-ruby"
