--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,9 +1,7 @@
 tap "homebrew/bundle"
-tap "homebrew/cask"
 tap "homebrew/cask-drivers"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
-tap "homebrew/core"
 tap "homebrew/services"
 tap "rbenv/tap"
 tap "warrensbox/tap"
@@ -139,10 +137,9 @@ cask "istat-menus"
 cask "iterm2"
 cask "jetbrains-toolbox"
 cask "kindle"
-cask "kitematic"
 cask "librewolf"
 cask "notion"
-cask "obs"
+cask "obsidian"
 cask "omnigraffle"
 cask "pop"
 cask "postman"
@@ -159,7 +156,7 @@ cask "telegram"
 cask "textual"
 cask "toggl-track"
 cask "vagrant"
-cask "visual-studio-code"
+cask "visual-studio-code-insiders"
 cask "vlc"
 cask "warp"
 cask "webex"
