--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -141,6 +141,7 @@ cask "kindle"
 cask "kitematic"
 cask "librewolf"
 cask "notion"
+cask "obsidian"
 cask "omnigraffle"
 cask "pop"
 cask "postman"
