--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -179,6 +179,7 @@ vscode "DotJoshJohnson.xml"
 vscode "eamodio.gitlens"
 vscode "EditorConfig.EditorConfig"
 vscode "elmTooling.elm-ls-vscode"
+vscode "GitHub.copilot"
 vscode "GitLab.gitlab-workflow"
 vscode "hashicorp.terraform"
 vscode "hbenl.vscode-test-explorer"
