--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -182,6 +182,7 @@ vscode "mechatroner.rainbow-csv"
 vscode "mikestead.dotenv"
 vscode "ms-azuretools.vscode-docker"
 vscode "ms-dotnettools.csharp"
+vscode "ms-dotnettools.vscode-dotnet-runtime"
 vscode "ms-python.black-formatter"
 vscode "ms-python.isort"
 vscode "ms-python.python"
