--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -30,6 +30,8 @@ brew "cocoapods"
 brew "gmp"
 brew "libidn2"
 brew "gnutls"
+brew "qemu"
+brew "lima"
 brew "colima"
 brew "coreutils"
 brew "cscope"
