--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -30,7 +30,6 @@ brew "cocoapods"
 brew "gmp"
 brew "libidn2"
 brew "gnutls"
-brew "qemu"
 brew "lima"
 brew "colima"
 brew "coreutils"
@@ -66,6 +65,7 @@ brew "grep"
 brew "groovy"
 brew "htop"
 brew "hub"
+brew "hugo"
 brew "jenv"
 brew "jq"
 brew "lazydocker"
