--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -10,12 +10,14 @@ brew "adns"
 brew "lz4"
 brew "glib"
 brew "lzo"
-brew "openssl@3"
+brew "python@3.9"
 brew "cairo"
 brew "graphite2"
+brew "icu4c"
 brew "harfbuzz"
 brew "apache-spark"
 brew "autoconf"
+brew "python@3.10"
 brew "autojump"
 brew "automake"
 brew "autossh"
@@ -25,7 +27,6 @@ brew "bash"
 brew "bat"
 brew "bfg"
 brew "chruby"
-brew "ruby"
 brew "cocoapods"
 brew "gmp"
 brew "libidn2"
@@ -34,11 +35,11 @@ brew "lima"
 brew "colima"
 brew "coreutils"
 brew "cscope"
+brew "libunistring"
+brew "libidn2"
 brew "openldap"
+brew "curl"
 brew "difftastic"
-brew "docker"
-brew "docker-buildx"
-brew "docker-compose"
 brew "docker-credential-helper-ecr"
 brew "dotnet"
 brew "fd"
@@ -55,10 +56,13 @@ brew "git-lfs"
 brew "git-secrets"
 brew "git-sizer"
 brew "gnu-getopt"
+brew "gnutls"
 brew "gnupg"
 brew "go"
 brew "gobject-introspection"
 brew "gradle"
+brew "netpbm"
+brew "pango"
 brew "librsvg"
 brew "graphviz"
 brew "grep"
@@ -78,6 +82,7 @@ brew "libxml2"
 brew "luajit"
 brew "mas"
 brew "maven"
+brew "node"
 brew "openjdk@11"
 brew "openjdk@8"
 brew "p7zip"
@@ -123,6 +128,7 @@ cask "caffeine"
 cask "calibre"
 cask "daisydisk"
 cask "discord"
+cask "docker"
 cask "dozer"
 cask "firefox"
 cask "flutter"
@@ -132,13 +138,11 @@ cask "font-fira-code-nerd-font"
 cask "font-open-sans"
 cask "font-powerline-symbols"
 cask "font-source-code-pro"
-cask "github"
 cask "google-chrome"
 cask "istat-menus"
 cask "iterm2"
 cask "jetbrains-toolbox"
 cask "kindle"
-cask "kitematic"
 cask "librewolf"
 cask "notion"
 cask "obsidian"
@@ -152,12 +156,13 @@ cask "robo-3t"
 cask "shortcutdetective"
 cask "signal"
 cask "slack"
+cask "spectacle"
 cask "spotify"
 cask "tableplus"
 cask "telegram"
 cask "textual"
 cask "vagrant"
-cask "visual-studio-code"
+cask "visual-studio-code-insiders"
 cask "vlc"
 cask "warp"
 cask "webex"
@@ -165,6 +170,7 @@ cask "whatsapp"
 cask "zoom"
 mas "iMovie", id: 408981434
 mas "Keynote", id: 409183694
+mas "Luminar AI", id: 1541310539
 mas "Meeter", id: 1510445899
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
