--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -29,10 +29,6 @@ brew "bfg"
 brew "chruby"
 brew "cocoapods"
 brew "gmp"
-brew "libidn2"
-brew "gnutls"
-brew "lima"
-brew "colima"
 brew "coreutils"
 brew "cscope"
 brew "libunistring"
@@ -69,7 +65,6 @@ brew "grep"
 brew "groovy"
 brew "htop"
 brew "hub"
-brew "hugo"
 brew "jenv"
 brew "jq"
 brew "lazydocker"
@@ -161,49 +156,33 @@ cask "spotify"
 cask "tableplus"
 cask "telegram"
 cask "textual"
+cask "toggl-track"
 cask "vagrant"
-cask "visual-studio-code-insiders"
+cask "visual-studio-code"
 cask "vlc"
 cask "warp"
 cask "webex"
 cask "whatsapp"
 cask "zoom"
+mas "GarageBand", id: 682658836
 mas "iMovie", id: 408981434
+mas "JSONPlistBuddy", id: 1574947481
 mas "Keynote", id: 409183694
 mas "Luminar AI", id: 1541310539
 mas "Meeter", id: 1510445899
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
 mas "Pixelmator Pro", id: 1289583905
-mas "Toggl Track", id: 1291898086
+mas "The Unarchiver", id: 425424353
 mas "Xcode", id: 497799835
-vscode "DotJoshJohnson.xml"
-vscode "eamodio.gitlens"
 vscode "EditorConfig.EditorConfig"
-vscode "elmTooling.elm-ls-vscode"
 vscode "GitHub.copilot"
-vscode "GitLab.gitlab-workflow"
-vscode "hashicorp.terraform"
-vscode "hbenl.vscode-test-explorer"
+vscode "haskell.haskell"
+vscode "justusadam.language-haskell"
 vscode "k--kato.intellij-idea-keybindings"
-vscode "mechatroner.rainbow-csv"
-vscode "mikestead.dotenv"
 vscode "ms-azuretools.vscode-docker"
-vscode "ms-dotnettools.csharp"
-vscode "ms-dotnettools.vscode-dotnet-runtime"
-vscode "ms-python.black-formatter"
-vscode "ms-python.isort"
-vscode "ms-python.python"
-vscode "ms-python.vscode-pylance"
-vscode "ms-toolsai.jupyter"
-vscode "ms-toolsai.vscode-jupyter-cell-tags"
-vscode "ms-toolsai.vscode-jupyter-slideshow"
 vscode "ms-vscode-remote.remote-containers"
-vscode "ms-vscode.test-adapter-converter"
-vscode "rebornix.ruby"
-vscode "redhat.fabric8-analytics"
 vscode "redhat.java"
-vscode "redhat.vscode-yaml"
 vscode "skyapps.fish-vscode"
 vscode "VisualStudioExptTeam.intellicode-api-usage-examples"
 vscode "VisualStudioExptTeam.vscodeintellicode"
@@ -212,4 +191,3 @@ vscode "vscjava.vscode-java-dependency"
 vscode "vscjava.vscode-java-pack"
 vscode "vscjava.vscode-java-test"
 vscode "vscjava.vscode-maven"
-vscode "wingrunr21.vscode-ruby"
