--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -174,6 +174,7 @@ vscode "eamodio.gitlens"
 vscode "EditorConfig.EditorConfig"
 vscode "elmTooling.elm-ls-vscode"
 vscode "GitHub.copilot"
+vscode "GitHub.copilot-chat"
 vscode "GitLab.gitlab-workflow"
 vscode "hashicorp.terraform"
 vscode "hbenl.vscode-test-explorer"
