--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -9,11 +9,11 @@ brew "adns"
 brew "lz4"
 brew "glib"
 brew "lzo"
-brew "openssl@3"
 brew "cairo"
 brew "graphite2"
 brew "harfbuzz"
 brew "apache-spark"
+brew "openssl@3"
 brew "autoconf"
 brew "autojump"
 brew "automake"
@@ -96,6 +96,7 @@ brew "socat"
 brew "spatialindex"
 brew "sshuttle"
 brew "subversion"
+brew "tcl-tk"
 brew "telnet"
 brew "terminal-notifier"
 brew "tfenv"
@@ -151,6 +152,7 @@ cask "shortcutdetective"
 cask "signal"
 cask "slack"
 cask "spotify"
+cask "supercollider"
 cask "tableplus"
 cask "telegram"
 cask "textual"
