--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -192,10 +192,10 @@ vscode "ms-toolsai.vscode-jupyter-cell-tags"
 vscode "ms-toolsai.vscode-jupyter-slideshow"
 vscode "ms-vscode-remote.remote-containers"
 vscode "ms-vscode.test-adapter-converter"
-vscode "rebornix.ruby"
 vscode "redhat.fabric8-analytics"
 vscode "redhat.java"
 vscode "redhat.vscode-yaml"
+vscode "Shopify.ruby-lsp"
 vscode "skyapps.fish-vscode"
 vscode "VisualStudioExptTeam.intellicode-api-usage-examples"
 vscode "VisualStudioExptTeam.vscodeintellicode"
@@ -204,4 +204,3 @@ vscode "vscjava.vscode-java-dependency"
 vscode "vscjava.vscode-java-pack"
 vscode "vscjava.vscode-java-test"
 vscode "vscjava.vscode-maven"
-vscode "wingrunr21.vscode-ruby"
