--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -181,6 +181,8 @@ vscode "GitHub.copilot-chat"
 vscode "GitLab.gitlab-workflow"
 vscode "hashicorp.terraform"
 vscode "hbenl.vscode-test-explorer"
+vscode "haskell.haskell"
+vscode "justusadam.language-haskell"
 vscode "k--kato.intellij-idea-keybindings"
 vscode "mechatroner.rainbow-csv"
 vscode "mikestead.dotenv"
@@ -206,5 +208,4 @@ vscode "VisualStudioExptTeam.vscodeintellicode"
 vscode "vscjava.vscode-java-debug"
 vscode "vscjava.vscode-java-dependency"
 vscode "vscjava.vscode-java-pack"
-vscode "vscjava.vscode-java-test"
 vscode "vscjava.vscode-maven"
