--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -8,6 +8,7 @@ brew "ack"
 brew "adns"
 brew "lz4"
 brew "glib"
+brew "pkg-config"
 brew "lzo"
 brew "cairo"
 brew "graphite2"
@@ -77,6 +78,7 @@ brew "libxml2"
 brew "luajit"
 brew "mas"
 brew "maven"
+brew "mysql"
 brew "openjdk@11"
 brew "openjdk@8"
 brew "p7zip"
