--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -116,6 +116,7 @@ cask "1password"
 cask "1password-cli"
 cask "alfred"
 cask "android-file-transfer"
+cask "arc"
 cask "aws-vault"
 cask "brave-browser"
 cask "caffeine"
