--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -78,6 +78,7 @@ brew "libxml2"
 brew "luajit"
 brew "mas"
 brew "maven"
+brew "mise"
 brew "mysql"
 brew "openjdk@11"
 brew "openjdk@8"
@@ -87,7 +88,6 @@ brew "perl"
 brew "php"
 brew "pinentry-mac"
 brew "pth"
-brew "rtx"
 brew "rust"
 brew "s3cmd"
 brew "sbt"
