--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -139,6 +139,7 @@ cask "jetbrains-toolbox"
 cask "kindle"
 cask "kitematic"
 cask "librewolf"
+cask "ngrok"
 cask "notion"
 cask "obsidian"
 cask "omnigraffle"
