--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -117,6 +117,7 @@ cask "1password"
 cask "1password-cli"
 cask "alfred"
 cask "android-file-transfer"
+cask "arc"
 cask "aws-vault"
 cask "caffeine"
 cask "calibre"
