--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -173,12 +173,17 @@ mas "Xcode", id: 497799835
 vscode "EditorConfig.EditorConfig"
 vscode "GitHub.copilot"
 vscode "GitHub.copilot-chat"
-vscode "haskell.haskell"
-vscode "justusadam.language-haskell"
+vscode "GitLab.gitlab-workflow"
+vscode "hashicorp.terraform"
+vscode "hbenl.vscode-test-explorer"
+vscode "jock.svg"
 vscode "k--kato.intellij-idea-keybindings"
 vscode "ms-azuretools.vscode-docker"
 vscode "ms-vscode-remote.remote-containers"
 vscode "redhat.java"
+vscode "redhat.vscode-yaml"
+vscode "Shopify.ruby-lsp"
+vscode "SimonSiefke.svg-preview"
 vscode "skyapps.fish-vscode"
 vscode "VisualStudioExptTeam.intellicode-api-usage-examples"
 vscode "VisualStudioExptTeam.vscodeintellicode"
