Updated brewfile on Whiz.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -198,6 +198,7 @@ vscode "ms-toolsai.vscode-jupyter-cell-tags"
 vscode "ms-toolsai.vscode-jupyter-slideshow"
 vscode "ms-vscode-remote.remote-containers"
 vscode "ms-vscode.test-adapter-converter"
+vscode "phplasma.csv-to-table"
 vscode "redhat.fabric8-analytics"
 vscode "redhat.java"
 vscode "redhat.vscode-yaml"
