Updated brewfile on Whiz.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,6 +1,8 @@
 tap "homebrew/bundle"
+tap "homebrew/cask"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
+tap "homebrew/core"
 tap "homebrew/services"
 tap "rbenv/tap"
 tap "warrensbox/tap"
@@ -8,7 +10,6 @@ brew "ack"
 brew "adns"
 brew "lz4"
 brew "glib"
-brew "pkg-config"
 brew "lzo"
 brew "cairo"
 brew "graphite2"
@@ -57,6 +58,7 @@ brew "git-sizer"
 brew "gnu-getopt"
 brew "gnupg"
 brew "go"
+brew "pkg-config"
 brew "gobject-introspection"
 brew "gradle"
 brew "librsvg"
