--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,9 +1,6 @@
 tap "homebrew/bundle"
 tap "homebrew/cask"
-<<<<<<< HEAD
-=======
 tap "homebrew/cask-drivers"
->>>>>>> 1613f24 (Updated brewfile on Beerus.local)
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
@@ -17,10 +14,11 @@ brew "glib"
 brew "lzo"
 brew "cairo"
 brew "graphite2"
+brew "icu4c"
 brew "harfbuzz"
 brew "apache-spark"
-brew "openssl@3"
 brew "autoconf"
+brew "python@3.10"
 brew "autojump"
 brew "automake"
 brew "autossh"
@@ -30,20 +28,15 @@ brew "bash"
 brew "bat"
 brew "bfg"
 brew "chruby"
-brew "ruby"
 brew "cocoapods"
 brew "gmp"
-brew "libidn2"
-brew "gnutls"
-brew "lima"
-brew "colima"
 brew "coreutils"
 brew "cscope"
+brew "libunistring"
+brew "libidn2"
 brew "openldap"
+brew "curl"
 brew "difftastic"
-brew "docker"
-brew "docker-buildx"
-brew "docker-compose"
 brew "docker-credential-helper-ecr"
 brew "dotnet"
 brew "fd"
@@ -60,23 +53,25 @@ brew "git-lfs"
 brew "git-secrets"
 brew "git-sizer"
 brew "gnu-getopt"
+brew "gnutls"
 brew "gnupg"
 brew "go"
-brew "pkg-config"
 brew "gobject-introspection"
 brew "gradle"
+brew "netpbm"
+brew "pango"
 brew "librsvg"
 brew "graphviz"
 brew "grep"
 brew "groovy"
 brew "htop"
 brew "hub"
-brew "hugo"
 brew "jenv"
 brew "jq"
 brew "lazydocker"
 brew "lazygit"
 brew "leiningen"
+brew "python@3.9"
 brew "libcroco"
 brew "libpq", link: true
 brew "libusb-compat"
@@ -84,8 +79,7 @@ brew "libxml2"
 brew "luajit"
 brew "mas"
 brew "maven"
-brew "mise"
-brew "mysql"
+brew "node"
 brew "openjdk@11"
 brew "openjdk@8"
 brew "p7zip"
@@ -95,6 +89,7 @@ brew "php"
 brew "pinentry-mac"
 brew "pth"
 brew "pyenv"
+brew "pyenv-virtualenv"
 brew "rust"
 brew "s3cmd"
 brew "sbt"
@@ -104,7 +99,6 @@ brew "socat"
 brew "spatialindex"
 brew "sshuttle"
 brew "subversion"
-brew "tcl-tk"
 brew "telnet"
 brew "terminal-notifier"
 brew "tfenv"
@@ -116,7 +110,9 @@ brew "tree"
 brew "viddy"
 brew "vim"
 brew "wget"
+brew "xhyve"
 brew "yarn"
+brew "youtube-dl"
 brew "rbenv/tap/openssl@1.0"
 brew "warrensbox/tap/tfswitch"
 cask "1password"
@@ -125,61 +121,55 @@ cask "alfred"
 cask "android-file-transfer"
 cask "arc"
 cask "aws-vault"
-cask "brave-browser"
 cask "caffeine"
 cask "calibre"
 cask "daisydisk"
 cask "discord"
+cask "docker"
 cask "dozer"
 cask "firefox"
+cask "flutter"
 cask "flux"
 cask "font-fira-code"
 cask "font-fira-code-nerd-font"
 cask "font-open-sans"
 cask "font-powerline-symbols"
 cask "font-source-code-pro"
-cask "github"
 cask "google-chrome"
 cask "istat-menus"
 cask "iterm2"
 cask "jetbrains-toolbox"
 cask "kindle"
-cask "kitematic"
 cask "librewolf"
-cask "ngrok"
-cask "notion"
 cask "obsidian"
 cask "omnigraffle"
-cask "openvpn-connect"
 cask "pop"
 cask "postman"
-<<<<<<< HEAD
-cask "powershell"
-=======
->>>>>>> 1613f24 (Updated brewfile on Beerus.local)
 cask "rectangle"
 cask "robo-3t"
 cask "shortcutdetective"
+cask "signal"
 cask "slack"
-cask "spotify"
-cask "supercollider"
+cask "spectacle"
 cask "tableplus"
-cask "telegram"
 cask "textual"
+cask "toggl-track"
 cask "vagrant"
 cask "visual-studio-code"
 cask "vlc"
-cask "warp"
 cask "webex"
 cask "whatsapp"
 cask "zoom"
+mas "GarageBand", id: 682658836
 mas "iMovie", id: 408981434
+mas "JSONPlistBuddy", id: 1574947481
 mas "Keynote", id: 409183694
+mas "Luminar AI", id: 1541310539
 mas "Meeter", id: 1510445899
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
 mas "Pixelmator Pro", id: 1289583905
-mas "Toggl Track", id: 1291898086
+mas "The Unarchiver", id: 425424353
 mas "Xcode", id: 497799835
 vscode "editorconfig.editorconfig"
 vscode "github.copilot"
@@ -187,32 +177,13 @@ vscode "github.copilot-chat"
 vscode "haskell.haskell"
 vscode "justusadam.language-haskell"
 vscode "k--kato.intellij-idea-keybindings"
-vscode "mechatroner.rainbow-csv"
-vscode "mikestead.dotenv"
 vscode "ms-azuretools.vscode-docker"
-vscode "ms-dotnettools.csharp"
-vscode "ms-dotnettools.vscode-dotnet-runtime"
-vscode "ms-python.black-formatter"
-vscode "ms-python.debugpy"
-vscode "ms-python.isort"
-vscode "ms-python.python"
-vscode "ms-python.vscode-pylance"
-vscode "ms-toolsai.jupyter"
-vscode "ms-toolsai.vscode-jupyter-cell-tags"
-vscode "ms-toolsai.vscode-jupyter-slideshow"
 vscode "ms-vscode-remote.remote-containers"
-vscode "ms-vscode.test-adapter-converter"
-vscode "phplasma.csv-to-table"
-vscode "redhat.fabric8-analytics"
 vscode "redhat.java"
-vscode "redhat.vscode-yaml"
-vscode "shopify.ruby-lsp"
-vscode "simonsiefke.svg-preview"
 vscode "skyapps.fish-vscode"
 vscode "visualstudioexptteam.intellicode-api-usage-examples"
 vscode "visualstudioexptteam.vscodeintellicode"
 vscode "vscjava.vscode-java-debug"
 vscode "vscjava.vscode-java-dependency"
 vscode "vscjava.vscode-java-pack"
-vscode "vscjava.vscode-java-test"
 vscode "vscjava.vscode-maven"
