--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -9,7 +9,7 @@ brew "ack"
 brew "adns"
 brew "lz4"
 brew "openssl@3"
-brew "glib"
+brew "glib", link: false
 brew "lzo"
 brew "cairo"
 brew "graphite2"
