--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -111,6 +111,7 @@ brew "tree"
 brew "viddy"
 brew "vim"
 brew "wget"
+brew "xsv"
 brew "yarn"
 brew "alajmo/mani/mani"
 brew "rbenv/tap/openssl@1.0"
