Updated brewfile on Whiz.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -115,6 +115,7 @@ brew "xsv"
 brew "yarn"
 brew "alajmo/mani/mani"
 brew "rbenv/tap/openssl@1.0"
+brew "warrensbox/tap/tfswitch"
 cask "1password"
 cask "1password-cli"
 cask "alfred"
