--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -68,6 +68,7 @@ brew "htop"
 brew "hub"
 brew "hugo"
 brew "jenv"
+brew "jnv"
 brew "jq"
 brew "lazydocker"
 brew "lazygit"
@@ -143,6 +144,7 @@ cask "jetbrains-toolbox"
 cask "kindle"
 cask "kitematic"
 cask "librewolf"
+cask "mongodb-compass"
 cask "ngrok"
 cask "notion"
 cask "obsidian"
