Updated brewfile on Whiz.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -146,12 +146,12 @@ cask "mongodb-compass"
 cask "ngrok"
 cask "notion"
 cask "obsidian"
+cask "omnigraffle"
 cask "openvpn-connect"
 cask "pop"
 cask "postman"
 cask "powershell"
 cask "rectangle"
-cask "robo-3t"
 cask "shortcutdetective"
 cask "slack"
 cask "spotify"
