Updated brewfile on Broly.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -163,7 +163,6 @@ cask "tableplus"
 cask "textual"
 cask "vagrant"
 cask "visual-studio-code"
-cask "vlc"
 cask "warp"
 cask "webex"
 cask "whatsapp"
@@ -199,6 +198,8 @@ vscode "ms-python.isort"
 vscode "ms-python.python"
 vscode "ms-python.vscode-pylance"
 vscode "ms-toolsai.jupyter"
+vscode "ms-toolsai.jupyter-keymap"
+vscode "ms-toolsai.jupyter-renderers"
 vscode "ms-toolsai.vscode-jupyter-cell-tags"
 vscode "ms-toolsai.vscode-jupyter-slideshow"
 vscode "ms-vscode-remote.remote-containers"
