--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -8,7 +8,7 @@ brew "ack"
 brew "adns"
 brew "lz4"
 brew "openssl@3"
-brew "glib", link: false
+brew "glib"
 brew "lzo"
 brew "cairo"
 brew "graphite2"
