Updated brewfile on Whiz.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -23,17 +23,18 @@ brew "awscli"
 brew "bash"
 brew "bat"
 brew "bfg"
+brew "gmp"
+brew "gcc"
+brew "cbc"
 brew "chruby"
 brew "ruby"
 brew "cocoapods"
-brew "gmp"
 brew "libidn2"
 brew "gnutls"
 brew "lima"
 brew "colima"
 brew "coreutils"
 brew "cscope"
-brew "openldap"
 brew "difftastic"
 brew "docker"
 brew "docker-buildx"
@@ -45,7 +46,6 @@ brew "fish"
 brew "libtool"
 brew "fribidi"
 brew "fzf"
-brew "gcc"
 brew "gd"
 brew "gdk-pixbuf"
 brew "git"
@@ -54,6 +54,7 @@ brew "git-lfs"
 brew "git-secrets"
 brew "git-sizer"
 brew "gnu-getopt"
+brew "openldap"
 brew "gnupg"
 brew "go"
 brew "pkg-config"
