Updated brewfile on Beerus.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -35,6 +35,9 @@ brew "lima"
 brew "colima"
 brew "coreutils"
 brew "cscope"
+brew "libunistring"
+brew "libidn2"
+brew "curl"
 brew "difftastic"
 brew "docker"
 brew "docker-buildx"
@@ -84,6 +87,7 @@ brew "mise"
 brew "mysql"
 brew "openjdk@11"
 brew "openjdk@8"
+brew "openldap"
 brew "p7zip"
 brew "pandoc"
 brew "perl"
