Updated brewfile on Beerus.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -45,9 +45,12 @@ brew "docker-compose"
 brew "docker-credential-helper-ecr"
 brew "dotnet"
 brew "fd"
+brew "fribidi"
+brew "gnutls"
+brew "pango"
+brew "ffmpeg"
 brew "fish"
 brew "libtool"
-brew "fribidi"
 brew "fzf"
 brew "gd"
 brew "gdk-pixbuf"
@@ -57,12 +60,12 @@ brew "git-lfs"
 brew "git-secrets"
 brew "git-sizer"
 brew "gnu-getopt"
-brew "openldap"
 brew "gnupg"
 brew "go"
 brew "pkg-config"
 brew "gobject-introspection"
 brew "gradle"
+brew "netpbm"
 brew "librsvg"
 brew "graphviz"
 brew "grep"
@@ -126,6 +129,7 @@ cask "1password-cli"
 cask "alfred"
 cask "android-file-transfer"
 cask "arc"
+cask "audacity"
 cask "aws-vault"
 cask "caffeine"
 cask "calibre"
