Updated brewfile on Whiz.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -170,8 +170,11 @@ mas "Pixelmator Pro", id: 1289583905
 vscode "editorconfig.editorconfig"
 vscode "github.copilot"
 vscode "github.copilot-chat"
-vscode "haskell.haskell"
-vscode "justusadam.language-haskell"
+vscode "gitlab.gitlab-workflow"
+vscode "golang.go"
+vscode "hashicorp.terraform"
+vscode "hbenl.vscode-test-explorer"
+vscode "jock.svg"
 vscode "k--kato.intellij-idea-keybindings"
 vscode "ms-azuretools.vscode-docker"
 vscode "ms-vscode-remote.remote-containers"
@@ -179,6 +182,7 @@ vscode "redhat.java"
 vscode "skyapps.fish-vscode"
 vscode "visualstudioexptteam.intellicode-api-usage-examples"
 vscode "visualstudioexptteam.vscodeintellicode"
+vscode "vscjava.vscode-gradle"
 vscode "vscjava.vscode-java-debug"
 vscode "vscjava.vscode-java-dependency"
 vscode "vscjava.vscode-java-pack"
