Updated brewfile on Whiz.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -157,6 +157,7 @@ cask "pop"
 cask "postman"
 cask "powershell"
 cask "rectangle"
+cask "rize"
 cask "shortcutdetective"
 cask "slack"
 cask "spotify"
