Updated brewfile on Whiz.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -18,7 +18,6 @@ brew "autoconf"
 brew "autojump"
 brew "automake"
 brew "autossh"
-brew "python@3.11"
 brew "awscli"
 brew "bash"
 brew "bat"
@@ -52,6 +51,7 @@ brew "gdk-pixbuf"
 brew "git"
 brew "git-filter-repo"
 brew "git-lfs"
+brew "git-quick-stats"
 brew "git-secrets"
 brew "git-sizer"
 brew "gnu-getopt"
@@ -94,6 +94,7 @@ brew "pinentry-mac"
 brew "pre-commit"
 brew "pth"
 brew "pyenv"
+brew "python@3.11"
 brew "ripgrep"
 brew "rust"
 brew "s3cmd"
