--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -42,12 +42,6 @@ brew "gnutls"
 brew "pango"
 brew "ffmpeg"
 brew "fish"
-is_fish_installed = !`which fish`.chomp.empty?
-if is_fish_installed 
-  File.open("#{Dir.home}/.config/fish/conf.d/brew-shellenv.fish", mode:'w') do |f|
-    f.write(`brew shellenv fish`)
-  end
-end
 brew "libtool"
 brew "fzf"
 is_fzf_installed = !`which fzf`.chomp.empty?
@@ -78,7 +72,8 @@ brew "grep"
 brew "groovy"
 brew "htop"
 brew "hub"
-brew "jenv"
+brew "hugo"
+brew "jnv"
 brew "jq"
 brew "lazydocker"
 brew "lazygit"
@@ -91,6 +86,7 @@ brew "libxml2"
 brew "luajit"
 brew "mas"
 brew "maven"
+brew "mise"
 is_mise_installed = !`which mise`.chomp.empty?
 if is_fish_installed && is_mise_installed 
   File.open("#{Dir.home}/.config/fish/conf.d/mise-activate.fish", mode:'w') do |f|
@@ -98,6 +94,7 @@ if is_fish_installed && is_mise_installed
     f.write(`mise activate fish`)
   end
 end
+brew "mysql"
 brew "openjdk@11"
 brew "openjdk@8"
 brew "openldap"
@@ -129,6 +126,7 @@ brew "thefuck"
 brew "tldr"
 brew "travis"
 brew "tree"
+brew "uv"
 brew "viddy"
 brew "vim"
 brew "wget"
