Updated brewfile on Beerus.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,20 +1,23 @@
-tap "alajmo/mani"
 tap "homebrew/bundle"
+tap "homebrew/cask-drivers"
 tap "homebrew/cask-fonts"
+tap "homebrew/cask-versions"
 tap "homebrew/services"
 tap "rbenv/tap"
 tap "warrensbox/tap"
 brew "ack"
 brew "adns"
 brew "lz4"
-brew "openssl@3"
+brew "libunistring"
 brew "glib"
 brew "lzo"
+brew "python@3.12"
 brew "cairo"
 brew "graphite2"
 brew "harfbuzz"
 brew "apache-spark"
 brew "autoconf"
+brew "python@3.10"
 brew "autojump"
 brew "automake"
 brew "autossh"
@@ -22,57 +25,50 @@ brew "awscli"
 brew "bash"
 brew "bat"
 brew "bfg"
-brew "gmp"
-brew "gcc"
-brew "cbc"
 brew "chruby"
-brew "ruby"
 brew "cocoapods"
-brew "libidn2"
-brew "gnutls"
-brew "lima"
-brew "colima"
+brew "gmp"
 brew "coreutils"
 brew "cscope"
-brew "csvkit"
+brew "curl"
 brew "difftastic"
-brew "docker"
-brew "docker-buildx"
-brew "docker-compose"
 brew "docker-credential-helper-ecr"
 brew "dotnet"
 brew "fd"
+brew "fribidi"
+brew "libidn2"
+brew "gnutls"
+brew "pango"
+brew "ffmpeg"
 brew "fish"
 brew "libtool"
-brew "fribidi"
 brew "fzf"
+brew "gcc"
 brew "gd"
 brew "gdk-pixbuf"
 brew "git"
 brew "git-filter-repo"
 brew "git-lfs"
-brew "git-quick-stats"
 brew "git-secrets"
 brew "git-sizer"
 brew "gnu-getopt"
 brew "gnupg"
 brew "go"
-brew "pkg-config"
 brew "gobject-introspection"
 brew "gradle"
+brew "netpbm"
 brew "librsvg"
 brew "graphviz"
 brew "grep"
 brew "groovy"
 brew "htop"
 brew "hub"
-brew "hugo"
-brew "jnv"
+brew "jenv"
 brew "jq"
-brew "just"
 brew "lazydocker"
 brew "lazygit"
 brew "leiningen"
+brew "python@3.9"
 brew "libcroco"
 brew "libpq", link: true
 brew "libusb-compat"
@@ -80,8 +76,7 @@ brew "libxml2"
 brew "luajit"
 brew "mas"
 brew "maven"
-brew "mise"
-brew "mysql"
+brew "node"
 brew "openjdk@11"
 brew "openjdk@8"
 brew "openldap"
@@ -94,7 +89,7 @@ brew "pth"
 brew "pyenv"
 brew "pyenv-virtualenv"
 brew "python@3.11"
-brew "ripgrep"
+brew "rclone"
 brew "rust"
 brew "s3cmd"
 brew "sbt"
@@ -104,7 +99,6 @@ brew "socat"
 brew "spatialindex"
 brew "sshuttle"
 brew "subversion"
-brew "tcl-tk"
 brew "telnet"
 brew "terminal-notifier"
 brew "tfenv"
@@ -117,9 +111,9 @@ brew "uv"
 brew "viddy"
 brew "vim"
 brew "wget"
-brew "xsv"
+brew "xhyve"
 brew "yarn"
-brew "alajmo/mani/mani"
+brew "yt-dlp"
 brew "rbenv/tap/openssl@1.0"
 brew "warrensbox/tap/tfswitch"
 cask "1password"
@@ -127,88 +121,66 @@ cask "1password-cli"
 cask "alfred"
 cask "android-file-transfer"
 cask "arc"
+cask "audacity"
 cask "aws-vault"
 cask "caffeine"
 cask "daisydisk"
 cask "discord"
+cask "docker"
 cask "dozer"
 cask "firefox"
+cask "flutter"
 cask "flux"
 cask "font-fira-code"
 cask "font-fira-code-nerd-font"
 cask "font-open-sans"
 cask "font-powerline-symbols"
 cask "font-source-code-pro"
-cask "github"
 cask "google-chrome"
 cask "istat-menus"
 cask "iterm2"
 cask "jetbrains-toolbox"
 cask "kindle"
-cask "kitematic"
 cask "librewolf"
-cask "mongodb-compass"
 cask "obsidian"
 cask "omnigraffle"
 cask "openvpn-connect"
 cask "pop"
 cask "postman"
-cask "powershell"
 cask "rectangle"
-cask "rize"
+cask "robo-3t"
 cask "shortcutdetective"
+cask "signal"
 cask "slack"
-cask "spotify"
+cask "spectacle"
 cask "tableplus"
 cask "textual"
+cask "toggl-track"
 cask "vagrant"
 cask "visual-studio-code"
 cask "vlc"
-cask "warp"
 cask "webex"
 cask "whatsapp"
 cask "zoom"
+mas "GarageBand", id: 682658836
 mas "iMovie", id: 408981434
 mas "Keynote", id: 409183694
 mas "Meeter", id: 1510445899
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
 mas "Pixelmator Pro", id: 1289583905
-mas "Toggl Track", id: 1291898086
-mas "Xcode", id: 497799835
-vscode "dotjoshjohnson.xml"
-vscode "eamodio.gitlens"
 vscode "editorconfig.editorconfig"
-vscode "elmtooling.elm-ls-vscode"
 vscode "github.copilot"
 vscode "github.copilot-chat"
-vscode "gitlab.gitlab-workflow"
-vscode "golang.go"
-vscode "hashicorp.terraform"
-vscode "hbenl.vscode-test-explorer"
-vscode "jock.svg"
+vscode "haskell.haskell"
+vscode "justusadam.language-haskell"
 vscode "k--kato.intellij-idea-keybindings"
-vscode "mechatroner.rainbow-csv"
-vscode "mikestead.dotenv"
 vscode "ms-azuretools.vscode-docker"
-vscode "ms-dotnettools.csharp"
-vscode "ms-dotnettools.vscode-dotnet-runtime"
-vscode "ms-python.black-formatter"
 vscode "ms-python.debugpy"
-vscode "ms-python.isort"
 vscode "ms-python.python"
 vscode "ms-python.vscode-pylance"
-vscode "ms-toolsai.jupyter"
-vscode "ms-toolsai.vscode-jupyter-cell-tags"
-vscode "ms-toolsai.vscode-jupyter-slideshow"
 vscode "ms-vscode-remote.remote-containers"
-vscode "ms-vscode.test-adapter-converter"
-vscode "phplasma.csv-to-table"
-vscode "redhat.fabric8-analytics"
 vscode "redhat.java"
-vscode "redhat.vscode-yaml"
-vscode "shopify.ruby-lsp"
-vscode "simonsiefke.svg-preview"
 vscode "skyapps.fish-vscode"
 vscode "visualstudioexptteam.intellicode-api-usage-examples"
 vscode "visualstudioexptteam.vscodeintellicode"
@@ -216,5 +188,4 @@ vscode "vscjava.vscode-gradle"
 vscode "vscjava.vscode-java-debug"
 vscode "vscjava.vscode-java-dependency"
 vscode "vscjava.vscode-java-pack"
-vscode "vscjava.vscode-java-test"
 vscode "vscjava.vscode-maven"
