Add Alfred workflows and themes for explicit import if the auto-import didn't work

--- a/alfred/Alfred.alfredpreferences/workflows/user.workflow.250A222A-E677-46C0-9746-FDE573ABEC50/info.plist
+++ b/alfred/Alfred.alfredpreferences/workflows/user.workflow.250A222A-E677-46C0-9746-FDE573ABEC50/info.plist
@@ -218,6 +218,12 @@
 			<integer>250</integer>
 		</dict>
 	</dict>
+	<key>userconfigurationconfig</key>
+	<array/>
+	<key>variablesdontexport</key>
+	<array/>
+	<key>version</key>
+	<string>1.0.0</string>
 	<key>webaddress</key>
 	<string></string>
 </dict>
