more non change changes

--- a/alfred/Alfred.alfredpreferences/preferences/local/b707bd2f21972ef84bd871d13613c56bc14215dc/appearance/prefs.plist
+++ b/alfred/Alfred.alfredpreferences/preferences/local/b707bd2f21972ef84bd871d13613c56bc14215dc/appearance/prefs.plist
@@ -4,5 +4,7 @@
 <dict>
 	<key>darkthemeuid</key>
 	<string>6222F6C0-F9FA-4ECE-AEA8-C484E7BD4080</string>
+	<key>lightthemeuid</key>
+	<string>6222F6C0-F9FA-4ECE-AEA8-C484E7BD4080</string>
 </dict>
 </plist>
