Remove unused apps

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -38,7 +38,6 @@ brew "docker"
 brew "docker-buildx"
 brew "docker-compose"
 brew "docker-credential-helper-ecr"
-brew "dotnet"
 brew "fd"
 brew "fish"
 brew "libtool"
@@ -83,13 +82,13 @@ brew "maven"
 brew "mise"
 brew "mysql"
 brew "openjdk@11"
-brew "openjdk@8"
 brew "openldap"
 brew "p7zip"
 brew "pandoc"
 brew "perl"
 brew "php"
 brew "pinentry-mac"
+brew "pre-commit"
 brew "pth"
 brew "pyenv"
 brew "pyenv-virtualenv"
@@ -137,19 +136,15 @@ cask "font-fira-code-nerd-font"
 cask "font-open-sans"
 cask "font-powerline-symbols"
 cask "font-source-code-pro"
-cask "github"
 cask "google-chrome"
 cask "istat-menus"
 cask "iterm2"
 cask "jetbrains-toolbox"
-cask "librewolf"
 cask "mongodb-compass"
 cask "obsidian"
-cask "omnigraffle"
 cask "openvpn-connect"
 cask "pop"
 cask "postman"
-cask "powershell"
 cask "rectangle"
 cask "rize"
 cask "shortcutdetective"
@@ -157,16 +152,12 @@ cask "slack"
 cask "spotify"
 cask "tableplus"
 cask "textual"
-cask "vagrant"
 cask "visual-studio-code"
-cask "warp"
 cask "webex"
 cask "whatsapp"
 cask "zoom"
 mas "iMovie", id: 408981434
-mas "Keynote", id: 409183694
 mas "Meeter", id: 1510445899
-mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
 mas "Pixelmator Pro", id: 1289583905
 mas "Toggl Track", id: 1291898086
