Updated brewfile on Broly.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -140,6 +140,8 @@ cask "google-chrome"
 cask "istat-menus"
 cask "iterm2"
 cask "jetbrains-toolbox"
+cask "microsoft-auto-update"
+cask "microsoft-teams"
 cask "mongodb-compass"
 cask "obsidian"
 cask "openvpn-connect"
@@ -147,9 +149,9 @@ cask "pop"
 cask "postman"
 cask "rectangle"
 cask "rize"
+cask "shortcat"
 cask "shortcutdetective"
 cask "slack"
-cask "spotify"
 cask "tableplus"
 cask "textual"
 cask "visual-studio-code"
