Updated brewfile on Broly.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -73,6 +73,7 @@ brew "lazydocker"
 brew "lazygit"
 brew "leiningen"
 brew "libcroco"
+brew "libomp"
 brew "libpq", link: true
 brew "libusb-compat"
 brew "libxml2"
@@ -140,6 +141,7 @@ cask "google-chrome"
 cask "istat-menus"
 cask "iterm2"
 cask "jetbrains-toolbox"
+cask "logitech-options"
 cask "microsoft-auto-update"
 cask "microsoft-teams"
 cask "mongodb-compass"
