Updated brewfile on Broly.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -6,9 +6,9 @@ tap "warrensbox/tap"
 brew "ack"
 brew "adns"
 brew "lz4"
-brew "openssl@3"
 brew "glib"
 brew "lzo"
+brew "openssl@3"
 brew "cairo"
 brew "graphite2"
 brew "icu4c@76"
@@ -51,6 +51,7 @@ brew "git-lfs"
 brew "git-quick-stats"
 brew "git-secrets"
 brew "git-sizer"
+brew "gitleaks"
 brew "gnu-getopt"
 brew "libidn2"
 brew "gnutls"
@@ -128,6 +129,7 @@ cask "android-file-transfer"
 cask "arc"
 cask "aws-vault"
 cask "caffeine"
+cask "cursor"
 cask "daisydisk"
 cask "discord"
 cask "firefox"
