--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -34,6 +34,7 @@ brew "coreutils"
 brew "cscope"
 brew "csvkit"
 brew "difftastic"
+brew "direnv"
 brew "docker"
 brew "docker-buildx"
 brew "docker-compose"
@@ -147,6 +148,7 @@ cask "logitech-options"
 cask "microsoft-auto-update"
 cask "microsoft-teams"
 cask "mongodb-compass"
+cask "ngrok"
 cask "obsidian"
 cask "openvpn-connect"
 cask "pop"
