--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -8,11 +8,11 @@ brew "adns"
 brew "lz4"
 brew "glib"
 brew "lzo"
-brew "openssl@3"
 brew "cairo"
 brew "graphite2"
 brew "icu4c@76"
 brew "harfbuzz"
+brew "openssl@3"
 brew "apache-spark"
 brew "autoconf"
 brew "autojump"
@@ -56,6 +56,7 @@ brew "gitleaks"
 brew "gnu-getopt"
 brew "libidn2"
 brew "gnutls"
+brew "pinentry"
 brew "gnupg"
 brew "go"
 brew "pkgconf"
